# deepra

./: README.md  pyproject.toml
deepra/src/: config.py  main.py
